# gpu-charts

./: .gitattributes  .gitignore  ARCHITECTURE_PLAN.md  BENCHMARK_FIXES_REPORT.md  CLAUDE.md  COMMIT_SUMMARY.md  Cargo.toml  DOCKER.md  DUAL_METRIC_TEST_PLAN.md  GPU_CANDLE_IMPLEMENTATION_PLAN.md  GPU_CHARTS_ARCHITECTURE_DEEPDIVE.md  IMPLEMENTATION_COMPARISON.md  MID_LINE_COMPUTE_PLAN.md  MULTI_EXCHANGE_LOGGER_PLAN.md  MULTI_EXCHANGE_MIGRATION.md  MULTI_RENDER_PIPELINE_ANALYSIS.md  PHASE2_TODO.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_2_INTEGRATION_GAP_REPORT.md  PHASE_2_RESULTS.md  PRESET_DATA_FLOW_PLAN.md  PRESET_FEATURE_SUMMARY.md  PRESET_IMPLEMENTATION_PLAN.md  PROJECT_COMPACT.md  PROMPT_1_COMPLETED.md  PROMPT_2_COMPLETED.md  PROMPT_4_COMPLETED.md  README.md  REFACTORING_TASKS.md  RENDER_GRAPH_ARCHITECTURE.md  TESTING_STRATEGY.md  aaa  api_benchmark.py  architect.md  architecture-diagram.md  basic_test_results.txt  benchmark_baseline.json  benchmark_baseline_phase3.txt  benchmark_baseline_phase3_comprehensive.txt  (+25 more)
benchmarks/: BENCHMARK_ANALYSIS.md  BENCHMARK_SUMMARY.md  Cargo.toml  OPTIMIZATION_SUMMARY.md  PERFORMANCE_RESULTS.md  QUICK_WINS_TRACKER.md  README.md  benchmark_report.html  compare_branches.sh  demo_phase2_improvements.sh  phase2_results_comparison.md  phase3_config_results.txt  run_benchmarks.sh
benchmarks/benches/: culling_benchmark.rs  data_loading.rs  end_to_end.rs  memory_usage.rs  phase2_comparison.rs  phase2_real.rs  phase3_charts.rs  phase3_config.rs  phase3_overlays.rs  phase3_production.rs  rendering.rs  simple_phase2.rs  stress_test.rs  vertex_compression_benchmark.rs
benchmarks/benchmark_results/20250721_182505/: index.html  summary.md
benchmarks/benchmark_results/20250721_182606/: index.html  summary.md
benchmarks/benchmark_results/20250721_192902/: index.html  summary.md
benchmarks/benchmark_results/20250722_091615/: index.html  summary.md
benchmarks/benchmark_results/20250722_092554/: index.html  summary.md  system_info.txt
benchmarks/benchmark_results/20250722_093852/: index.html  summary.md
benchmarks/benchmark_results/20250722_100025/: index.html  summary.md
benchmarks/benchmark_results/20250722_103634/: index.html  summary.md
benchmarks/src/: data_generator.rs  gpu_utils.rs  lib.rs  metrics.rs  optimized_benchmark.rs  phase2_benchmark.rs.bak  scenarios.rs
coinbase-logger/: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  DOCKERHUB_SETUP.md  DOCKER_DEPLOYMENT.md  Dockerfile  PERFORMANCE_IMPROVEMENTS.md  TEST_SUMMARY.md  deny.toml  docker-compose.prod.yml  docker-compose.yml  docker-restart.sh  fix-docker-compose.sh  restart_daily_script.sh  run.sh  test_improvements.md
coinbase-logger/docs/: CURRENT_DATA_TYPES.md  coinbase-logger-phase1-ticker-trades.md  coinbase-logger-phase2-market-trades.md  coinbase-logger-phase3-advanced-features.md  phase1-completion-summary.md  phase2-completion-summary.md  phase3-completion-summary.md  phase3-simplified-approach.md
coinbase-logger/src/: aggregation.rs  connection.rs  data_types.rs  file_handlers.rs  health.rs  lib.rs  main.rs  simple_analytics.rs  websocket.rs
coinbase-logger/tests/: connection_pooling_tests.rs  exponential_backoff_tests.rs  file_io_tests.rs  file_rotation_test.rs  integration_tests.rs  message_buffering_tests.rs  nanosecond_precision_tests.rs
crates/config-system/: CLAUDE.md  Cargo.toml
crates/config-system/examples/: config.yaml  demo.rs
crates/config-system/src/: auto_tuning.rs  file_watcher.rs  hot_reload.rs  lib.rs  parser.rs  presets.rs  schema.rs  system.rs  validation.rs
crates/data-manager/: CLAUDE.md  Cargo.toml
crates/data-manager/benches/: buffer_management.rs  data_parsing.rs
crates/data-manager/src/: aggregation.rs  binary_parser.rs  buffer_pool.rs  cache.rs  chunked.rs  compression.rs  data_retriever.rs  data_store.rs  direct_gpu_parser.rs  fetcher.rs  handle.rs  http2_client.rs  lib.rs  manager.rs  parser.rs  progressive_streaming.rs  request_batching.rs  server_parser.rs  simd.rs  wasm_api.rs  (+3 more)
crates/gpu-charts-unified/: Cargo.toml
crates/renderer/: CLAUDE.md  Cargo.toml  MULTI_RENDERER_USAGE.md
crates/shared-types/: CLAUDE.md  Cargo.toml
crates/system-integration/: Cargo.toml
crates/wasm-bridge/: CLAUDE.md  Cargo.toml
crates/wasm-bridge-minimal/: Cargo.toml
crates/wasm-fetch/: Cargo.toml
crates/wasm-storage/: Cargo.toml
crates/wasm-websocket/: Cargo.toml
logger/: .dockerignore  BINANCE_IO_ERROR_FIX.md  CLAUDE.md  Cargo.toml  Dockerfile  ERROR_FIXES.md  EXCHANGE_INTEGRATION_PLAN.md  IO_ERROR_SOLUTION.md  LOGGING_IMPROVEMENTS.md  REVIEW_COMPLETE.md  REVIEW_FIXES.md  TRADE_ID_BUFFER_FIX.md  TRADE_ID_FIX_SUMMARY.md  check-storage-setup.sh  config-local.yaml  config-production.yaml  config.example.yaml  config.local.yaml  config.yaml  docker-compose.yml  docker-volume-fix.sh  fix-trade-id-file.sh  fix-trade-id-issue.sh  investigate-trade-id.sh  log.txt  symbol_mappings.yaml  test-all-exchanges-local.sh  test-config.yaml  test-exchanges-detailed.sh  test-exchanges-local.sh  test-exchanges.sh  test-flush-behavior.sh
logger/src/: config.rs  lib.rs  main.rs  main_new.rs  metrics_exporter.rs  metrics_server.rs
logger/tests/: integration_tests.rs
server/: .dockerignore  .env.example  .gitignore  API_SYMBOLS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.production  PERFORMANCE_OPTIMIZATIONS.md  README-PRODUCTION.md  README.md  build.rs  cert.pem  config.toml  deploy-configs.sh  docker-build.sh  docker-compose.production.yml  docker-compose.yml  docker-entrypoint.sh  docker-push.sh  generate-cert-for-domain.sh  generate-certs.sh  key.pem  letsencrypt-setup.sh  localhost.crt  localhost.key  renew-certs.sh  test_api.sh  test_api_production.sh  test_symbol_search.sh  test_symbols_advanced.sh  test_symbols_api.sh
server/certs/: .gitkeep
server/rust-web-server/: Cargo.toml  README.md  a.bat
server/scripts/: generate_symbol_configs.py
server/src/: data.rs  lib.rs  main.rs  main_new.rs  metrics.rs  metrics_server.rs  status.rs  symbols.rs
server/tests/: data_tests.rs  unit_tests.rs
(+537 files in other folders)
