[workspace]
resolver = "2"
members = [
    # Core WASM crates (following NEW_ARCHITECTURE.md)
    "crates/shared-types",
    "crates/data-manager",
    "crates/renderer",
    "crates/wasm-bridge",
    
    # Additional useful crates
    "crates/config-system",
    
    # Other modules
    "server", 
    "coinbase-logger",
    "file_server",
    
    # Benchmarking
    "benchmarks"
]
exclude = [
    "benchmarks_simple"  # Simple benchmarks without dependencies
]


[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["GPU Charts Team"]
license = "MIT"
repository = "https://github.com/masteryachty/gpu-charts"

[workspace.dependencies]
# Core dependencies
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Performance"] }
js-sys = "0.3"
wgpu = { version = "25.0", features = ["webgpu"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
bincode = "1.3"

# Performance and utilities
bytemuck = { version = "1.18", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "js", "serde"] }
log = "0.4"
console_log = "1.0"

# Error handling
thiserror = "1.0"
console_error_panic_hook = "0.1"
once_cell = "1.19"

# Async runtime
futures = "0.3"
tokio = { version = "1", default-features = false }
chrono = "0.4"

# Memory mapping
memmap2 = "0.9"

# Math and graphics
nalgebra-glm = "0.19"

# Networking
url = "2"
bytes = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2", "stream"] }

# Development dependencies
criterion = { version = "0.5", features = ["html_reports"] }

# Profile configurations for maximum performance
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release-wasm]
inherits = "release"
opt-level = "z"  # Optimize for size in WASM

[profile.bench]
inherits = "release"
