[workspace]
resolver = "2"
members = [
    "server", 
    "coinbase-logger",
    "file_server"
]
exclude = [
    "charting"
]

# Note: charting is WASM-only and built via wasm-pack, excluded from workspace

[workspace.dependencies]
# Common dependencies across workspace members
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
futures = "0.3"
url = "2"
bytes = "1.0"