[workspace]
resolver = "2"
members = [
    "server", 
    "logger",
    "file_server",
    "crates/shared-types",
    "crates/config-system",
    "crates/data-manager",
    "crates/renderer",
    "crates/wasm-bridge"
]
# All crates are now part of the workspace

[workspace.dependencies]
# Common dependencies across workspace members
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
futures = "0.3"
url = "2"
bytes = "1.0"

[profile.release]
lto = true
opt-level = "z"