[package]
name = "gpu-charts-benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Benchmarking
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.0", features = ["full"] }

# Charting dependencies
gpu-charts-renderer = { path = "../crates/renderer" }
gpu-charts-shared = { path = "../crates/shared-types" }

# WebGPU
wgpu = { workspace = true }
bytemuck = { workspace = true }

# Utilities
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
env_logger = "0.11"
log = { workspace = true }
uuid = { workspace = true }
once_cell = "1.19"

# System monitoring
sysinfo = "0.30"

[[bench]]
name = "data_loading"
harness = false

[[bench]]
name = "rendering"
harness = false

[[bench]]
name = "memory_usage"
harness = false

[[bench]]
name = "end_to_end"
harness = false

[[bench]]
name = "stress_test"
harness = false

[[bench]]
name = "phase2_real"
harness = false

[[bench]]
name = "phase2_comparison"
harness = false

[[bench]]
name = "simple_phase2"
harness = false

[[bin]]
name = "compare_benchmarks"
path = "src/bin/compare_benchmarks.rs"