[package]
name = "coinbase-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", default-features = false, features = ["rustls", "rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
chrono = "0.4"
http = "0.2"
base64 = "0.22.1"
rand = "0.9.0"
