[package]
name = "coinbase-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.20.1", default-features = false, features = ["rustls", "rustls-tls-webpki-roots", "connect"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
chrono = "0.4"
http = "0.2"
base64 = "0.22.1"
rand = "0.9.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
tempfile = "3.8"
mockall = "0.11"
tokio-test = "0.4"

[lib]
name = "coinbase_logger"
path = "src/lib.rs"

[[bin]]
name = "coinbase-logger"
path = "src/main.rs"
