[package]
name = "logger"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "logger"
path = "src/main.rs"

[lib]
name = "logger"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
byteorder = "1.5"
dashmap = "5.5"
crossbeam-channel = "0.5"
async-trait = "0.1"
config = "0.14"
once_cell = "1.19"
parking_lot = "0.12"
warp = "0.3"
prometheus = { version = "0.14", features = ["process"] }
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
mockito = "1.2"
test-log = "0.2"

# [[bench]]
# name = "parser_bench"
# harness = false