[package]
name = "ultra_low_latency_server_chunked_parallel"
version = "0.1.0"
edition = "2021"

[lib]
name = "ultra_low_latency_server_chunked_parallel"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
memmap2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2"
futures = "0.3"
rustls = "0.21.11"
tokio-rustls = "0.24"
rustls-pemfile = "1.0"
bytes = "1.0"
libc = "0.2"
chrono = "0.4.41"
tokio-stream ={ version = "0.1.17", features = ["fs"] }

[build-dependencies]
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
