[package]
name = "gpu-charts-config"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
wasm = []

[dependencies]
# Core dependencies
gpu-charts-shared = { path = "../shared-types" }
gpu-charts-renderer = { path = "../renderer" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
toml = "0.8"


# Performance
parking_lot = "0.12"
dashmap = "6.1"


# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Logging
log = { workspace = true }

# Hot-reload
arc-swap = "1.7"

# Pattern matching
regex = "1.11"

# Platform-specific dependencies
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["rt", "sync", "fs"] }
jsonschema = "0.26"

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true, default-features = false, features = ["rt", "sync"] }
web-sys = { workspace = true, features = ["Window", "Navigator", "Performance"] }
js-sys = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.14"
env_logger = "0.11"

[[example]]
name = "demo"
path = "examples/demo.rs"