[package]
name = "data-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-types = { path = "../shared-types" }
reqwasm = { version = "0.5", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "js"] }
bytemuck = "1.14"
log = "0.4"
nalgebra-glm = "0.18"
wgpu = { version = "=24.0.5", features = ["webgpu"] }
urlencoding = "2.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console", "Window", "Document", "Element", "Request", "RequestInit", "Headers",
    "Response", "ResponseInit", "Blob", "ReadableStream"
] }