[package]
name = "gpu-charts-unified"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
# Workspace dependencies
wasm-bindgen = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
web-sys = { workspace = true, features = ["console", "Performance", "Window"] }
js-sys = { workspace = true }
gpu-charts-shared = { path = "../shared-types" }

# For async runtime in WASM
wasm-bindgen-futures = { workspace = true }
futures = { workspace = true }

# Error handling
thiserror = "1.0"

# Logging
log = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log = "1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"
