[package]
name = "gpu-charts-renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = []
timestamps = []

[dependencies]
# Workspace dependencies
gpu-charts-shared = { path = "../shared-types" }
wasm-bindgen = { workspace = true }
wgpu = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bytemuck = { workspace = true }
nalgebra-glm = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
js-sys = { workspace = true }

# Text rendering
wgpu_text = "0.9"

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["Window", "Performance"] }

[dev-dependencies]
criterion = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bench]]
name = "render_performance"
harness = false