[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
shared-types = { path = "../shared-types" }
config-system = { path = "../config-system" }
data-manager = { path = "../data-manager" }
wgpu = { version = "=24.0.5", features = ["webgpu"] }
bytemuck = { version = "1.14", features = ["derive"] }
ab_glyph = "0.2"
thiserror = "2.0"
uuid = { version = "1.0", features = ["v4", "js"] }
futures = "0.3"
log = "0.4"
getrandom = { version = "0.2", features = ["js"] }
nalgebra-glm = "0.18"
wgpu_text = "=0.9.2"
chrono = "0.4"
wasm-bindgen-futures = "0.4"


[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
] }
