[package]
name = "gpu-charts-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal crates
gpu-charts-shared = { path = "../shared-types" }
gpu-charts-data = { path = "../data-manager" }
gpu-charts-renderer = { path = "../renderer" }
gpu-charts-config = { path = "../config-system" }

# WebGPU
wgpu = { workspace = true }

# Async runtime
tokio = { version = "1.0", default-features = false, features = ["rt", "sync"] }

# Error handling
thiserror = { workspace = true }
anyhow = "1.0"

# Logging
log = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
parking_lot = "0.12"
dashmap = "6.1"
uuid = { workspace = true }

# Performance
crossbeam-channel = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
env_logger = "0.11"

[[example]]
name = "integration_demo"
path = "examples/integration_demo.rs"