[package]
name = "gpu-charts-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Fix getrandom for WASM
getrandom = { version = "0.2", features = ["js"] }
# Internal crates
gpu-charts-shared = { path = "../shared-types", features = ["typescript"] }
gpu-charts-data = { path = "../data-manager", features = ["wasm"] }
gpu-charts-renderer = { path = "../renderer" }
gpu-charts-config = { path = "../config-system", default-features = false, features = ["wasm"] }

# WebGPU
wgpu = { workspace = true }

# WASM dependencies
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true }
js-sys = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
console_log = { workspace = true }
log = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack]
wasm-opt = false