[package]
name = "wasm-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
shared-types = { path = "../shared-types" }
config-system = { path = "../config-system" }
data-manager = { path = "../data-manager" }
renderer = { path = "../renderer" }
wgpu = { version = "=24.0.5", features = ["webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console", "Window", "Document", "Element", "HtmlCanvasElement", 
    "OffscreenCanvas", "WebGl2RenderingContext", "MouseEvent", "WheelEvent",
    "PointerEvent", "CssStyleDeclaration", "Performance", "PerformanceMark",
    "UrlSearchParams", "Location"
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5"
console_error_panic_hook = "0.1"
console_log = "1.0"
cfg-if = "1.0"
thiserror = "2.0"
nalgebra-glm = "0.18"
log = "0.4"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
bytemuck = "1.13"

[dev-dependencies]
wasm-bindgen-test = "0.3"