[package]
name = "big_file_server"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "generate"
#path = "src/generate.rs"

[build]
rustflags = ["-C", "target-cpu=znver1"]  # AMD Zen optimization
# OR for generic AVX2:
#rustflags = ["-C", "target-feature=+avx2,+fma"]

[dependencies]
axum = "0.6"
tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "full", "signal"] }
hyper = { version = "0.14", features = ["full"] }  # Ensure 0.14.x is up-to-date
tokio-rustls = "0.23"
rustls = "0.20"
rustls-pemfile = "1.0"   # <-- Important: for loading .pem keys/certs
memmap2 = "0.5"
bytemuck = "1.13"
futures = "0.3"
tokio-stream = "0.1"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs"] }
rayon = "1.10.0"
cpuid = "0.1.1"
